--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Motion_sensor"
+        android:background="@color/black"
+        app:titleTextColor="@color/white"/>
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="92dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="114dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="20sp"/>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="200dp"
-        android:text="TextView" />
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="240dp"
+        android:text="TextView"
+        android:textSize="20sp"/>
 
 </RelativeLayout>
